	- [Get/Set]ForgottenSwapFormCooldown
	- [Get/Set]RockBottomMoveSpeed
	- [Get/Set]RockBottomMaxFireDelay
	- [Get/Set]RockBottomDamage
	- [Get/Set]RockBottomTearRange
	- [Get/Set]RockBottomShotSpeed
	- [Get/Set]RockBottomLuck
	- GetPlayerHUD
	- [Get/Set]SuplexState
	- [Get/Set]SuplexAimCountdown
	- [Get/Set]SuplexTargetPosition
	- [Get/Set]SuplexLandPosition
	- CreateAfterimage
* EntityFamiliar:
	- IsLilDelirium
	- SetLilDelirium
	- GetRandomWisp
* EntityConfigEntity:
	- GetDevolvedEntity
* Level:
	- Added overloads for CanPlaceRoom(AtDoor) and FindValidRoomPlacementLocations that accept a RoomShape and DoorMask instead of a RoomConfigRoom.
* PlayerManager:
	- GetRandomCollectibleOwner
	- GetRandomTrinketOwner
* ItemPool:
	- AddCollectible
	- AddTemporaryCollectible
	- RemoveTemporaryCollectible
* HUD:
	- GetStackedStreakSprite
	- GetPlayerStreakSprite
* PlayerHUD:
	- GetIndex
	- GetLayout
* Room:
	- TriggerOutput(RoomEventOutput GroupIdx)
* RoomConfig:
	- AddRooms
* RoomConfigSet:
	- AddRooms
*FXLayers:
	- AddPoopFx(ColorMod Color)
* CharacterMenu
	- GetPlayerTypeFromCharacterMenuID(int CharacterMenuID, bool Tainted)
		Tainted boolean defaults to current menu if unspecified.
* ModCallbacks:
	- MC_PRE_PLAYER_POCKET_ITEMS_SWAP(EntityPlayer player)
		Triggers when the player swaps their pocket items using the action drop button (even if they are empty).
		Return true to cancel pocket item swap.
	- MC_PRE_TRIGGER_BED_SLEEP_EFFECT(EntityPlayer player)
		Triggers if "SleepFillHP" item overlay sprite's event is triggered, and before the hearts addition is applied.
		Return true to cancel vanilla behavior.
	- MC_PRE_BED_SLEEP(EntityPlayer player, EntityPickup bed)
		Triggers on bed collision and before playing sleep sequence.
		Return true to cancel vanilla behavior.
	- MC_PRE_ENTITY_SET_COLOR(Entity entity, int duration, int priority, bool fadeOut, bool share)
		Fires when Entity:SetColor is called
		Takes an EntityType as its optional argument. 