@@ -201,7 +201,7 @@ ModCallbacks.MC_POST_NPC_COLLISION = 1247
 ModCallbacks.MC_PRE_LASER_COLLISION = 1248
 ModCallbacks.MC_POST_LASER_COLLISION = 1249
 ModCallbacks.MC_PICKUP_GET_COIN_VALUE = 1250
-ModCallbacks.MC_POST_PLAYER_GET_MULTI_SHOT_PARAMS = 1251
+ModCallbacks.MC_POST_PLAYER_GET_MULTI_SHOT_PARAMS = 1251  -- Legacy callback. Keep but do not document. Use MC_EVALUATE_MULTI_SHOT_PARAMS instead.
 ModCallbacks.MC_POST_FAMILIAR_FIRE_PROJECTILE = 1252
 ModCallbacks.MC_POST_FIRE_BOMB = 1253
 ModCallbacks.MC_POST_FIRE_BONE_CLUB =  1254
@@ -229,12 +229,11 @@ ModCallbacks.MC_PRE_PLAYER_ADD_COSTUME = 1281
 ModCallbacks.MC_PRE_PLAYER_REMOVE_COSTUME = 1282
 ModCallbacks.MC_POST_PLAYER_ADD_COSTUME = 1283
 ModCallbacks.MC_POST_PLAYER_REMOVE_COSTUME = 1284
-
 ModCallbacks.MC_PRE_TRIGGER_BED_SLEEP_EFFECT = 1285
 ModCallbacks.MC_POST_TRIGGER_BED_SLEEP_EFFECT = 1286
 ModCallbacks.MC_PRE_PLAYER_POCKET_ITEMS_SWAP = 1287
 ModCallbacks.MC_PRE_BED_SLEEP = 1288
-
+ModCallbacks.MC_EVALUATE_MULTI_SHOT_PARAMS = 1289
 ModCallbacks.MC_PRE_GET_RANDOM_ROOM_INDEX = 1290
 
 ModCallbacks.MC_POST_GLOWING_HOURGLASS_SAVE = 1300
